Remove the title from home, which seemed to break it?

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 plugins:
-  - jekyll-relative-linksF
+  - jekyll-relative-links
   - jekyll-default-layout
 relative_links:
   enabled:     true
